--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontology-consultation-dock-popup/odontology-consultation-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontology-consultation-dock-popup/odontology-consultation-dock-popup.component.html
@@ -27,15 +27,18 @@
 		<app-new-consultation-expansion-section id="reasons"
 			[title]="'odontologia.odontology-consultation-dock-popup.REASON_TITLE' | translate" icon="sms_failed"
 			[isEmpty]="reasonNewConsultationService.isEmpty()" [recommend]="true">
-			<div>
-				<app-document-section-table [columns]="reasonNewConsultationService.getTableColumnConfig()"
-					[data]="reasonNewConsultationService.getMotivosConsulta()">
-				</app-document-section-table>
+			<div fxLayout="column" fxLayoutGap="2vh">
+				<app-titled-content-card *ngIf="!reasonNewConsultationService.isEmpty()"
+					title="{{ 'ambulatoria.paciente.nueva-consulta.motivo.LIST_CARD_TITLE' }}">
+					<app-reason-list [service]="reasonNewConsultationService"></app-reason-list>
+				</app-titled-content-card>
 
-				<button mat-button type="button" id="add-reason-button" color="primary" class="add-button"
-					(click)="addReason()">
-					+ {{ 'odontologia.odontology-consultation-dock-popup.ADD_REASON' | translate }}
-				</button>
+				<div>
+					<button mat-button type="button" id="add-reason-button" color="primary" class="add-button"
+						(click)="addReason()">
+						+ {{ 'odontologia.odontology-consultation-dock-popup.ADD_REASON' | translate }}
+					</button>
+				</div>
 			</div>
 		</app-new-consultation-expansion-section>
 
