--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
@@ -27,7 +27,7 @@
 			[title]="'ambulatoria.paciente.nueva-consulta.motivo.TITLE' | translate" icon="sms_failed"
 			[isEmpty]="motivoNuevaConsultaService.isEmpty()" [recommend]="true">
 			<div fxLayout="column" fxLayoutGap="2vh">
-				<app-document-section-card-list *ngIf="!motivoNuevaConsultaService.isEmpty()"
+				<app-titled-content-card *ngIf="!motivoNuevaConsultaService.isEmpty()"
 					title="{{ 'ambulatoria.paciente.nueva-consulta.motivo.LIST_CARD_TITLE' }}">
 					<div
 						*ngFor="let motivo of motivoNuevaConsultaService.getMotivosConsulta(); index as i; last as isLast">
@@ -40,7 +40,7 @@
 						</div>
 						<mat-divider class="separation" inset *ngIf="!isLast"></mat-divider>
 					</div>
-				</app-document-section-card-list>
+				</app-titled-content-card>
 
 				<div>
 					<button mat-button type="button" id="add-reason-button" color="primary" class="add-button"
@@ -56,7 +56,7 @@
 			[isEmpty]="ambulatoryConsultationProblemsService.isEmpty()" [collapsed]="false" [recommend]="true">
 			<div fxLayout="column" fxLayoutGap="2vh">
 
-				<app-document-section-card-list *ngIf="!ambulatoryConsultationProblemsService.isEmpty()"
+				<app-titled-content-card *ngIf="!ambulatoryConsultationProblemsService.isEmpty()"
 					title="{{ 'ambulatoria.paciente.nueva-consulta.problemas.PROBLEMA' }}">
 					<div
 						*ngFor="let problema of ambulatoryConsultationProblemsService.getProblemas(); index as i; last as isLast">
@@ -112,7 +112,7 @@
 
 						<mat-divider class="separation" inset *ngIf="!isLast"></mat-divider>
 					</div>
-				</app-document-section-card-list>
+				</app-titled-content-card>
 
 				<div>
 					<button mat-button type="button" id="add-problem-button" color="primary" class="add-button"
@@ -140,7 +140,7 @@
 			[isEmpty]="antecedentesFamiliaresNuevaConsultaService.isEmpty()">
 			<div fxLayout="column" fxLayoutGap="2vh">
 
-				<app-document-section-card-list *ngIf="!antecedentesFamiliaresNuevaConsultaService.isEmpty()"
+				<app-titled-content-card *ngIf="!antecedentesFamiliaresNuevaConsultaService.isEmpty()"
 					title="{{ 'ambulatoria.paciente.nueva-consulta.antecedentes-familiares.LIST_CARD_TITLE' }}">
 					<div
 						*ngFor="let antecedente of antecedentesFamiliaresNuevaConsultaService.getAntecedentesFamiliares(); index as i; last as isLast">
@@ -160,7 +160,7 @@
 						</div>
 						<mat-divider class="separation" inset *ngIf="!isLast"></mat-divider>
 					</div>
-				</app-document-section-card-list>
+				</app-titled-content-card>
 
 				<div>
 					<button mat-button type="button" id="add-family-history-button" color="primary" class="add-button"
@@ -176,7 +176,7 @@
 			[isEmpty]="medicacionesNuevaConsultaService.isEmpty()">
 			<div fxLayout="column" fxLayoutGap="2vh">
 
-				<app-document-section-card-list *ngIf="!medicacionesNuevaConsultaService.isEmpty()"
+				<app-titled-content-card *ngIf="!medicacionesNuevaConsultaService.isEmpty()"
 					title="{{ 'ambulatoria.paciente.nueva-consulta.medicaciones.LIST_CARD_TITLE' }}">
 					<div fxLayout="column" fxLayoutGap="10px"
 						*ngFor="let medicacion of medicacionesNuevaConsultaService.getMedicaciones(); index as i; last as isLast">
@@ -198,7 +198,7 @@
 						</em>
 						<mat-divider class="separation" inset *ngIf="!isLast"></mat-divider>
 					</div>
-				</app-document-section-card-list>
+				</app-titled-content-card>
 
 				<div>
 					<button mat-button type="button" id="add-medication-button" color="primary" class="add-button"
@@ -214,7 +214,7 @@
 			[isEmpty]="procedimientoNuevaConsultaService.isEmpty()">
 			<div fxLayout="column" fxLayoutGap="2vh">
 
-				<app-document-section-card-list *ngIf="!procedimientoNuevaConsultaService.isEmpty()"
+				<app-titled-content-card *ngIf="!procedimientoNuevaConsultaService.isEmpty()"
 					title="{{ 'ambulatoria.paciente.nueva-consulta.procedimientos.TABLE_TITLE' }}">
 					<div
 						*ngFor="let procedimiento of procedimientoNuevaConsultaService.getProcedimientos(); index as i; last as isLast">
@@ -232,7 +232,7 @@
 						</div>
 						<mat-divider class="separation" inset *ngIf="!isLast"></mat-divider>
 					</div>
-				</app-document-section-card-list>
+				</app-titled-content-card>
 
 				<div>
 					<button mat-button type="button" id="add-procedure-button" color="primary" class="add-button"
@@ -261,7 +261,7 @@
 			[isEmpty]="alergiasNuevaConsultaService.isEmpty()">
 			<div fxLayout="column" fxLayoutGap="2vh">
 
-				<app-document-section-card-list *ngIf="!alergiasNuevaConsultaService.isEmpty()"
+				<app-titled-content-card *ngIf="!alergiasNuevaConsultaService.isEmpty()"
 					title="{{ 'ambulatoria.paciente.nueva-consulta.alergias.table.TITLE' }}">
 					<div *ngFor="let alergia of alergiasNuevaConsultaService.getAlergias(); index as i; last as isLast">
 						<div fxLayout="row" fxLayoutAlign="space-between center">
@@ -279,7 +279,7 @@
 						</div>
 						<mat-divider class="separation" inset *ngIf="!isLast"></mat-divider>
 					</div>
-				</app-document-section-card-list>
+				</app-titled-content-card>
 
 				<div>
 					<button mat-button type="button" id="add-allergies-button" color="primary" class="add-button"
@@ -295,7 +295,7 @@
 			[isEmpty]="ambulatoryConsultationReferenceService.isEmpty()">
 			<div fxLayout="column" fxLayoutGap="2vh">
 
-				<app-document-section-card-list *ngIf="!ambulatoryConsultationReferenceService.isEmpty()"
+				<app-titled-content-card *ngIf="!ambulatoryConsultationReferenceService.isEmpty()"
 					title="{{ 'ambulatoria.paciente.nueva-consulta.solicitud-referencia.REGISTERED_REQUEST' }}">
 					<div
 						*ngFor="let request of ambulatoryConsultationReferenceService.getData(); last as isLast; trackBy: trackByRequest">
@@ -340,7 +340,7 @@
 						</div>
 						<mat-divider class="separation" inset *ngIf="!isLast"></mat-divider>
 					</div>
-				</app-document-section-card-list>
+				</app-titled-content-card>
 
 				<div>
 					<button mat-button type="button" id="add-request-button" color="primary" class="add-button"
